# inno-quiz

./: .env.local  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_05_06_1810-925d548a3e8a_db_tables.py  2025_05_06_1924-41e01bbab7ad_add_tables.py
src/: choices.py  main.py
src/api/: __init__.py  auth.py  questions.py  quiz_results.py  quizzes.py  trivia.py  users.py
src/auth/: __init__.py  dependencies.py  utils.py
src/crud/: quiz.py  user.py
src/models/: base.py  quiz.py  user.py
src/schemas/: quiz.py  user.py
src/settings/: database.py  general.py  redis.py
src/streamlit/: app.py
src/utils/: cache.py  dependencies.py  exceptions.py  filters.py  orm.py  response.py
src/utils/base/: repository.py  settings.py
tests/: conftest.py  test_api.py  test_auth.py  test_auth_dependencies.py  test_crud.py  test_exceptions.py  test_main.py  test_questions.py  test_questions_coverage.py  test_quiz_results.py  test_quiz_results_coverage.py  test_quizzes.py  test_schema_validators.py  test_users.py
