[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.poetry]
authors = ["Iskander Shamsutdinov <wensietyt@gmail.com>"]
description = "InnoQuiz platform"
name = "inno-quiz"
readme = "README.md"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
aiosqlite = "^0.20.0"
alembic = "1.15.2"
asyncpg = "^0.30.0"
bcrypt = "<4.1.0"
email-validator = "^2.1.1"
fastapi = "0.115.12"
httpx = "^0.27.0"
passlib = "^1.7.4"
psycopg2-binary = "2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pydantic = "2.11.3"
pydantic-settings = "2.8.1"
python = "~3.12"
redis = "5.2.1"
requests = "^2.31.0"
sqlalchemy = "2.0.40"
streamlit = "^1.32.0"
uvicorn = "0.34.0"
greenlet = "^3.0.0"
flake8 = "^7.2.0"
extra-streamlit-components = "^0.1.80"
bandit = "^1.8.3"

[tool.poetry.group.dev.dependencies]
mypy = "1.15.0"
pytest = "8.3.5"
pytest-cov = "6.1.1"
ruff = "0.11.4"
toml-sort = "0.24.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
SQLAlchemy-Utils = "^0.41.1"

[tool.pytest.ini_options]
addopts = "--verbose --disable-warnings --cov=. --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
extend-ignore = [
  "ANN204",
  "ANN401",
  "B008"
]
extend-select = [
  "A",
  "ANN",
  "B",
  "C",
  "E",
  "ERA",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "RUF",
  "S",
  "T20",
  "UP"
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN"]

[tool.flake8]
max-line-length = 120